# dspy-profiles

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  PROJECT.md  README.md  foo.txt  index.html  main.py  mkdocs.yml  objects.inv  plan.md  pyproject.toml  todo.md
.github/actions_old/setup/: action.yml
.github/workflows/: auto-tag.yml  cd.yml  ci.yml  docs.yml  publish.yml  release-test.yml  release.yml  reusable-setup.yml  snapshot.yml  tests.yml
.github/workflows_old/: cd.yml  release.yml  tests.yml
advanced-usage/: index.html
api-reference/: index.html
changelog/: index.html
cli-reference/: index.html
cli-run-reference/: index.html
contributing/: index.html
docs/: advanced-usage.md  api-reference.md  api.md  changelog.md  cli-reference.md  cli-run-reference.md  contributing.md  index.md  quickstart.md  troubleshooting.md
dspy_profiles/: __init__.py  api.py  cli.py  config.py  core.py  ipython.py  loader.py  logging_utils.py  profiles.py  schemas.py  validation.py
dspy_profiles/commands/: delete.py  diff.py  import_profile.py  init.py  list.py  run.py  set.py  show.py  validate.py
examples/: adaptive_agent.py  decorator_usage.py  extended_profiles.py  hello_decorator.py  hello_runner.py  hello_world.py  multiple_profiles.py  profile_overrides.py  retrieval_example.py
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_api.py  test_cli.py  test_cli_delete.py  test_cli_diff.py  test_cli_import.py  test_cli_run.py  test_cli_test.py  test_composition.py  test_config.py  test_core.py  test_core_logic.py  test_ipython.py  test_loader.py  test_logging_utils.py  test_more_coverage.py  test_utils.py  test_validation.py
